Fix for media area alignments on question page

--- a/app/client/css/main/question/_question.scss
+++ b/app/client/css/main/question/_question.scss
@@ -45,6 +45,7 @@ div.question {
                      width: 100%;
                      height: 80%;
                      margin-bottom: 0.8em;
+                     vertical-align: middle;
                   }
                   
                   vertical-align: top;
