--- a/app/server/public/_app.css
+++ b/app/server/public/_app.css
@@ -10120,7 +10120,8 @@ div.main {
               div.main div.mobile-scroll div.main-content div.content div.question div.sub-content div.question-section.media div.media-area div.media-container .youtube-container {
                 width: 100%;
                 height: 80%;
-                margin-bottom: 0.8em; }
+                margin-bottom: 0.8em;
+                vertical-align: middle; }
               div.main div.mobile-scroll div.main-content div.content div.question div.sub-content div.question-section.media div.media-area div.media-container .description {
                 font-size: 1.0em; }
         div.main div.mobile-scroll div.main-content div.content div.question div.sub-content div.question-section.comments {
